# HydraHost

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
HydraHost/: CMakeLists.txt  Gui.cpp  Gui.h  OpenGLContext.cpp  OpenGLContext.h  Win32Window.cpp  Win32Window.h  WindowState.h  main.cpp
assets/: sphere.usda
build_scripts/: build_usd.py
imgui/: CMakeLists.txt
usd/: CMakeLists.txt
